parser/tests/bad/ref02-1.st
% identifier 'x' is a 'subprogram', cannot be used as reference
%   identifier reference

procedure p(i: int)
  % empty
end p

p := 1
